Added notes for link colors  into styles.css

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,9 @@
 
 Background - #181A1B - Dark grey
 Font (main) - #CECAC3 - Light grey
+
+Need to add link color (blue?)
+Hover color - lighter grey?
 */ 
 
 @import 'https://fonts.googleapis.com/css?family=Raleway';
