--- a/css/styles.css
+++ b/css/styles.css
@@ -1,17 +1,8 @@
-/* Color Palette 
-
-Background - #181A1B - Dark grey
-Font (main) - #CECAC3 - Light grey
-
-Need to add link color (blue?)
-Hover color - lighter grey?
-*/ 
-
 @import 'https://fonts.googleapis.com/css?family=Raleway';
 
 :root {
 	--text-color: #212121;
-	--background-color: #181A1B;
+	--background-color: #eeefeb;
 	--dark-grey: #2b2b2b;
 	--heading__font-weight: 700;
 }
@@ -39,36 +30,85 @@ h3 {
 	font-weight:  var(--heading__font-weight);
 }
 
+ul {
+    justify-content: center;
+    list-style-type: none;
+  }
+
+  li {
+    display: flex;
+    justify-content: center;
+  }
+
 .pokemon-list {
 	list-style: none;
 }
-.button-class {
-	background-color: #EF3E33; /* Pokeball red */
-	border: none;
+
+.navbar {
+    background-color: #c6251a;
+    text-transform: uppercase;
 	color: white;
-	padding: 16px 32px;
+}
+
+main {
+    margin-top: 120px;
+  }
+
+
+/* individual pokemon list buttons */
+.button-class {
 	text-align: center;
+	text-transform: capitalize;
 	text-decoration: none;
-	display: inline-block;
 	font-family: 'Chivo Mono', monospace;
+	text-shadow: 2px 4px 4px rgba(0, 0, 0, 0.6);
 	font-size: 20px;
-	margin: 4px 2px;
-	-webkit-transition-duration: 0.4s; /* Safari */
+	margin: 24px, auto;
+	margin-bottom:10px;
+	padding: 20px;
+	-webkit-transition-duration: 0.4s;
 	transition-duration: 0.4s;
 	cursor: pointer;
-	background-color: white;
-	color: black;
-	border: 5px solid #EF3E33;
-	border-radius: 15px;
+	/* background image for button with darkened property */
+	background:linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.411)), url("../img/modal-background.png") no-repeat;
+	color: rgb(255, 255, 255);
+	border-radius: 10px;
+	border:none;
+	/* button hover animation */
+	transition: 0.1s transform ease-in-out, 0.5s background-color ease-in-out;
+	height: 200px;
+	width: 200px;
   }
+
+  .button-class:hover {
+    background-color: var(--button-hover);
+    cursor: pointer;
+    transform: scale(1.075);
+  }
+
+  .form-control {
+    border: none;
+}
+
 
   .center-align {
 	text-align: center;
   }
 
+  ul {
+	justify-content: center;
+	list-style-type: none;
+  }
+
+  li {
+	display:flex;
+	justify-content:center;
+  }
+
   #modal-container {
 	display:none;
   }
+/* -------modal items------ */
 
   #modal-container.is-visible {
 
@@ -81,7 +121,7 @@ h3 {
 	height:100%;
 	background: rgba(0, 0, 0 0.5);
 
-	/* to show it above other content */
+	/* to show modal above other content */
 	z-index:999;
 
 	/* to allow scrolling if the screen is not high enough */
@@ -92,18 +132,30 @@ h3 {
 	text-align:center;
   }
 
-  .modal {
+  #modal {
 	margin:auto;
-	display:inline-block;
 	box-sizing:border-box;
 	background:#fff;
 	padding:15px;
 	width:100%;
 	max-width:700px;
-	text-align:left;
+	text-align:center;
   }
 
-  .modal-close{
+  .modal-content {
+	background: white;
+	border: 4px solid;
+	border-color:#c6251a;
+	border-radius:5px;
+	height: 500px;
+	margin: auto;
+	padding:15px;
+	width:500px;
+	text-transform: capitalize;
+	text-align: center;
+  }
+
+  #modal-close{
 	float:right;
 	border:0;
 	background:none;
@@ -112,10 +164,37 @@ h3 {
 	cursor: pointer;
   }
 
-  .modal h1{
+  #modal h1{
 	margin-top:0;
   }
 
-  .modal p {
+  #modal p {
 	margin-bottom: 0;
+  }
+
+  .modal-header {
+	font-size: 24px;
+	text-transform:capitalize;
+	text-align:center;
+  }
+
+  #modal-title {
+    font-size: 24px;
+	text-transform:capitalize;
+	text-align:center;
+  } 
+
+  .modal-img {
+    margin-top: 20px;
+    width: 50%;
+  }
+
+  #modal-text {
+    bottom: 0;
+    padding: 16px 16px 16px 0;
+    position: absolute;
+    text-align: center;
+  }
+  #close:focus {
+    outline: none;
   }
